# shiori-keeper

./: .actrc  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  cliff.toml  docker-compose.yml  mise.toml  prompt.md  pyproject.toml  run-local.sh  start.sh
.githooks/: commit-msg  pre-push
.github/: dependabot.yml
.github/workflows/: dockerhub-publish.yml  github-packages-publish.yml  pr-tests.yml  release-on-tag.yml
api/: Dockerfile  README.md  database.py  dependencies.py  main.py  pyproject.toml  requirements.txt
api/app/: main.py  models.py  models_settings.py
api/app/repositories/: bookmark_repo.py  settings_repo.py  tag_repo.py
api/app/routers/: folders.py  settings.py  tags.py
api/app/services/: bookmark_service.py  folder_service.py  tag_service.py
api/model/: models.py  models_settings.py
api/repositories/: bookmark_repo.py  folder_repo.py  rss_feed_repo.py  settings_repo.py  tag_repo.py
api/routers/: bookmark_tags.py  bookmarks.py  folders.py  metrics.py  rss_feeds.py  settings.py  tags.py
api/services/: base.py  bookmark_base.py  bookmark_service.py  dashboard_service.py  folder_service.py  rss_feed_service.py  settings_service.py  tag_service.py  webhook_service.py
api/tests/: test_bookmarks.py  test_database.py  test_folders.py  test_metrics.py  test_properties.py  test_rss_feeds.py  test_settings.py  test_support.py  test_tags.py
batch/: Cargo.toml
batch/src/: db.rs  lib.rs  main.rs  runner.rs  webhook.rs
batch/tests/: run_batch.rs  webhook.rs
browser_extension/: README.md  components.d.ts  package.json  wxt.config.ts
chrome-extension/: manifest.json  popup.css  popup.html  popup.js
db/: schema.sql
db/migrations/: 012_add_rss_periodic_execution_flag.sql  013_add_rss_feed_webhook_notification_flag.sql  202604251114_add_performance_indexes.sql  (+1 more)
doc/: test-observations.md
doc/api/: test-observations.md
docs/: commit-policy.md
frontend/: Dockerfile  README.md  app.vue  bun.lockb  nginx.conf  nuxt.config.ts  package.json  playwright.config.ts  vitest.config.ts
scripts/: check-browser-extension-popup-api-contract.sh  run-all-tests.sh  run-e2e-tests.sh  run-github-actions.sh  setup-repo.sh
specs/: README.md  design.md  llm-reading-guide.md  requirements.md
(+140 files in other folders)
