[project]
name = "bookmark-manager"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "httpx>=0.27.0",
    "hypothesis>=6.100.0",
    "pydantic>=2.7.0",
    "pytest>=9.0.3",
]

[project.scripts]
api-dev = "api.main:dev"
api-run = "api.main:serve"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.10",
    "uvicorn[standard]>=0.29.0",
]
