[package]
name = "shiori-keeper-batch"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rss = "2.0.12"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
